# AI-Rust-agent

./: .env.example  .gitignore  README.md  REFLECTION.md  SOURCES.md  docker-compose.macos-host-ollama.yaml  docker-compose.nvidia-gpu.yaml  docker-compose.yaml
backend/: Cargo.toml  Dockerfile
backend/data/: rust_tools.json
backend/src/: config.rs  error.rs  main.rs  state.rs
backend/src/agent/: mod.rs  orchestrator.rs  planner.rs  policy.rs  prompts.rs  synthesizer.rs
backend/src/api/: chat.rs  debug_crates_search.rs  debug_execute.rs  debug_github_search.rs  debug_llm.rs  debug_local_search.rs  debug_plan.rs  health.rs  mod.rs  sessions.rs
backend/src/models/: chat.rs  crates.rs  execution.rs  github.rs  local_data.rs  mod.rs  ollama.rs  openrouter.rs  sessions.rs  tool.rs
backend/src/services/: llm.rs  mod.rs  session_store.rs
backend/src/tools/: crates.rs  github.rs  local_data.rs  mod.rs
demo/: demo_script.md
frontend/: Dockerfile  app.py  pyproject.toml
