[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
dotenvy = "0.15.7"
envy = "0.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
anyhow = "1.0.102"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
redis = { version = "1.2.0", features = ["tokio-comp"] }
tower-http = { version = "0.6.8", features = ["trace"] }
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
